# SFML-space-shooter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: astroid.h  bullet.h  config.h  game.h  map.h  player.h  resource_manager.h  ui.h
src/: astroid.cpp  bullet.cpp  game.cpp  main.cpp  map.cpp  player.cpp  resource_manager.cpp  ui.cpp
